--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,4 @@
 cronjobs:
   - name: dibbs-scraper
-    schedule: "0 12 * * *"  # every day at 12 PM UTC
+    schedule: "0 12 * * *"
     command: "python dibbs_scraper_render.py"
